--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <title>JS Practice Questions</title>
 </head>
 
-<body>
-    <h1>JAVA-SCRIPT Practice Questions</h1>
+<body style="display: flex;flex-direction: column;justify-content: center;align-items: center;
+">
+    <h1 style="text-align: center;">JAVA-SCRIPT Practice Questions</h1>
     <!-- <p>FOR Practice Question 10</p> -->
     <!-- <input type="number" id="first" placeholder="Enter First Number">
     <input type="number" id="last" placeholder="Enter Last Number">
     <button onclick="Loops()">Get Result</button> -->
     <!-- <p>FOR Practice Question 11</p> -->
-    <input type="number" id="inp-value" placeholder="Enter Number" min="0" style="padding: 8px 2px;"><span
+    <input type="number" id="inp-value" placeholder="Enter Number" min="0" style="text-align: center;padding: 8px 2px;"><span
         style="padding: 0px 8px;font-size: 30px;">&times;</span>
-    <input type="number" id="times-value" placeholder="Enter Number" min="0" style="padding: 8px 2px;"><br>
+    <input type="number" id="times-value" placeholder="Enter Number" min="0" style="text-align: center;padding: 8px 2px;"><br>
     <button style="margin: 10px 133px; padding: 8px 25px; font-size: 18px;" onclick="Table()">Get Table</button>
     <script src="script.js"></script>
 </body>
